--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="./assets/css/normalize.css">
+	<link rel="stylesheet" href="./styles.css">
 	<title>Repair-design-project</title>
 </head>
+
 <body>
-	
+	<div class="wrapper">
+		<header class="header">
+			<div class="container">
+				<div class="navigation">
+					<a href="#" class="navigation__name">IC "Repair Design Project"</a>
+					<nav class="nav">
+						<ul class="nav__list">
+							<li class="nav__item">
+								<a href="#" class="nav__link nav__link_current">home</a>
+							</li>
+							<li class="nav__item">
+								<a href="#" class="nav__link">projects</a>
+							</li>
+							<li class="nav__item">
+								<a href="#" class="nav__link">masurement</a>
+							</li>
+							<li class="nav__item">
+								<a href="#" class="nav__link">team</a>
+							</li>
+							<li class="nav__item">
+								<a href="#" class="nav__link">reviews</a>
+							</li>
+							<li class="nav__item">
+								<a href="#" class="nav__link">contacts</a>
+							</li>
+						</ul>
+					</nav>
+					<div class="navigation__phone">
+						<a class="navigation__phone-link" href="tel:+7 (928) 768-32-39">+7 (928) 768-32-39</a>
+						<button class="navigation__button" type="button">Request a call</button>
+					</div>
+				</div>
+			</div>
+		</header>
+	</div>
 </body>
+
 </html>
