--- a/index.html
+++ b/index.html
@@ -45,6 +45,39 @@
 				</div>
 			</div>
 		</header>
+
+		<main class="main">
+
+			<section class="hero">
+				<div class="container">
+					<div class="hero__left-line">
+						<a class="hero__link" href="#">instagram</a>
+					</div>
+					<div class="hero__wrapper">
+						<div class="hero__main">
+							<h1 class="hero__header">
+								Turnkey Repair in the
+								city of <span class="hero__span">Rostov-on-Don</span>
+							</h1>
+							<p class="hero__text">
+								Get ready-made turnkey repairs on time
+								with work time saving up to 45 days and 20% from
+								cost of materials due to the organization of work
+							</p>
+							<div class="hero__wrapper-btn">
+								<button class="hero__button">calculate the cost</button>
+								<button class="hero__button">submit your application</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="scroll-down">
+					<button class="button-scroll">scroll down</button>
+				</div>
+			</section>
+
+		</main>
+
 	</div>
 </body>
 
