feat: add 50% section projects

--- a/index.html
+++ b/index.html
@@ -76,6 +76,81 @@
 				</div>
 			</section>
 
+			<section class="projects">
+				<div class="container">
+					<div class="projects__wrapper">
+						<h2 class="projects__header">
+							Completed
+							<br>
+							projects
+						</h2>
+						<p class="projects__text">
+							Only a small part of the work performed by our company is presented on the site. For 14 years on in the
+							construction
+							market we have made happy more than 1000 families
+						</p>
+						<table class="projects__table">
+							<tr>
+								<th>City:</th>
+								<th>apartment area:</th>
+							</tr>
+							<tr>
+								<td>Rostov-on-Don
+									<br>
+									LCD admiral</td>
+								<td>81 m2</td>
+							</tr>
+							<tr>
+								<th>Repair time:</th>
+								<th>Repair Cost:</th>
+							</tr>
+							<tr>
+								<td>3.5 months</td>
+								<td>Upon request</td>
+							</tr>
+						</table>
+						<ul class="projects__nav">
+							<li><button class="projects__button projects__button_current" type="button"></button>
+							</li>
+							<li>
+								<button class="projects__button" type="button"></button>
+							</li>
+							<li>
+								<button class="projects__button" type="button"></button>
+							</li>
+						</ul>
+					</div>
+					<div class="gallery">
+						<ul class="gallery__nav">
+							<li class="gallery__item">
+								<a href="#" class="gallery__link gallery__link_current">Rostov-on-Don, Admiral</a>
+							</li>
+							<li class="gallery__item">
+								<a href="#" class="gallery__link">Soc hi
+									<br>
+									Thieves</a>
+							</li>
+							<li class="gallery__item">
+								<a href="#" class="gallery__link">Rostov-on-Don Patriotic</a>
+							</li>
+						</ul>
+						<div class="gallery__photos">
+							<ul class="gallery__photos-list">
+								<li class="gallery__photos-item">
+									<img src="" alt="">
+								</li>
+								<li class="gallery__photos-item">
+									<img src="" alt="">
+								</li>
+							</ul>
+							<button class="gallery__button"></button>
+							<button class="gallery__button"></button>
+						</div>
+					</div>
+
+				</div>
+			</section>
+
 		</main>
 
 	</div>
