feat: add section 'control', responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 						</ul>
 					</nav>
 					<div class="navigation__phone">
-						<a class="navigation__phone-link" href="tel:+7 (928) 768-32-39">+7 (928) 768-32-39</a>
+						<a class="navigation__phone-link" href="tel:+7(928)768-32-39">
+							+7 (928) 768-32-39</a>
 						<button class="navigation__button" type="button">Request a call</button>
 					</div>
 				</div>
@@ -154,6 +155,42 @@
 						</div>
 					</div>
 
+				</div>
+			</section>
+
+			<section class="control">
+				<h2 class="control__header">online control</h2>
+				<div class="control__camera-icon">
+					<span class="control__lines">
+						<img src="./assets/images/camera.svg" alt="camera">
+					</span>
+				</div>
+				<div class="container">
+					<div class="control__video-wrapper">
+						<iframe width="818" height="434" src="https://www.youtube.com/embed/uz-RQOqZN40" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<p class="control__text">
+						At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you
+						can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast
+						from one of our facilities!
+						Leave a request below and you will receive a link to the broadcast.
+					</p>
+					<form class="communication">
+						<p class="communication__block">
+							<label class="communication__label" for="name">Name</label>
+							<input class="communication__input" id="name" name="name" type="text" placeholder="What is your name:">
+						</p>
+						<p class="communication__block">
+							<label class="communication__label" for="phone">Phone</label>
+							<input class="communication__input" id="phone" name="phone" type="tel" placeholder="Your phone number:">
+						</p>
+						<button class="communication__button" type="button">submit</button>
+						<div class="communication__checkbox">
+							<input type="checkbox" name="confirm-form" id="confirm-form" checked>
+							<label for="confirm-form">I agree to the processing of personal data</label>
+						</div>
+					</form>
 				</div>
 			</section>
 
