feat: add section 'repair', desktop version

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<h2 class="control__header">online control</h2>
 				<div class="control__camera-icon">
 					<span class="control__lines">
-						<img src="./assets/images/camera.svg" alt="camera">
+						<img src="./assets/images/camera.svg" width="33" height="28" alt="camera">
 					</span>
 				</div>
 				<div class="container">
@@ -191,6 +191,87 @@
 							<label for="confirm-form">I agree to the processing of personal data</label>
 						</div>
 					</form>
+				</div>
+			</section>
+
+			<section class="repair">
+				<div class="container">
+					<h2 class="header-section">
+						types of repair
+					</h2>
+					<div class="repair__camera-icon">
+						<span class="repair__lines">
+							<img src="./assets/images/repair-hummer.svg" width="28" height="28" alt="icon-hummer">
+						</span>
+					</div>
+					<ul class="repair__list">
+						<li class="repair__item">
+							<picture>
+								<source srcset="./assets/images/redecorating-mobile.jpg" media="(max-width: 375px)">
+								<source srcset="./assets/images/redecorating-desktop.jpg">
+								<img src="./assets/images/redecorating-desktop.jpg" alt="Redecorating">
+							</picture>
+							<div class="repair__list-wrapper">
+								<h3 class="repair__list-header">
+									Redecorating
+								</h3>
+								<ul class="repair__sublist">
+									<li>Dismantling of old coating</li>
+									<li>Wallpapering</li>
+									<li>Painting walls and ceiling</li>
+									<li>Layging flooring</li>
+									<li>Replacing plumbing</li>
+									<li>Replacing sockets and switches</li>
+									<li>Replacing doors</li>
+								</ul>
+							</div>
+							<button class="repair__button" type="button">from 900 rub / m2</button>
+						</li>
+						<li class="repair__item">
+							<picture>
+								<source srcset="./assets/images/repair-overhaul-mobile.jpg" media="(max-width: 375px)">
+								<source srcset="./assets/images/repair-overhaul-desktop.jpg">
+								<img src="./assets/images/repair-overhaul-desktop.jpg" alt="Redecorating">
+							</picture>
+							<div class="repair__list-wrapper">
+								<h3 class="repair__list-header">
+									Redecorating
+								</h3>
+								<ul class="repair__sublist">
+									<li>Dismantling of old coating</li>
+									<li>Wallpapering</li>
+									<li>Painting walls and ceiling</li>
+									<li>Layging flooring</li>
+									<li>Replacing plumbing</li>
+									<li>Replacing sockets and switches</li>
+									<li>Replacing doors</li>
+								</ul>
+							</div>
+							<button class="repair__button" type="button">from 1800 rub / m2</button>
+						</li>
+						<li class="repair__item">
+							<picture>
+								<source srcset="./assets/images/repair-designer-mobile.jpg" media="(max-width: 375px)">
+								<source srcset="./assets/images/repair-designer-desktop.jpg">
+								<img src="./assets/images/repair-designer-desktop.jpg" alt="Redecorating">
+							</picture>
+							<div class="repair__list-wrapper">
+								<h3 class="repair__list-header">
+									Redecorating
+								</h3>
+								<ul class="repair__sublist">
+									<li>Dismantling of old coating</li>
+									<li>Wallpapering</li>
+									<li>Painting walls and ceiling</li>
+									<li>Layging flooring</li>
+									<li>Replacing plumbing</li>
+									<li>Replacing sockets and switches</li>
+									<li>Replacing doors</li>
+								</ul>
+							</div>
+							<button class="repair__button" type="button">from 4000 rub / m2</button>
+						</li>
+					</ul>
 				</div>
 			</section>
 
