--- a/index.html
+++ b/index.html
@@ -275,6 +275,48 @@
 				</div>
 			</section>
 
+			<section class="measurement">
+				<div class="container">
+					<div class="measurement__image">
+						<img src="./assets/images/measurement-bg.png" alt="measurement steps">
+					</div>
+					<div class="measurement__wrapper">
+						<form class="measurement__form">
+							<legend class="measurement__legend">
+								Leave a request for free
+								<br>
+								departure of the measurer
+							</legend>
+							<p class="measurement__block">
+								<label class="measurement__label" for="measurement__name">Name</label>
+								<input class="measurement__input" id="measurement__name" name="name" type="text"
+									placeholder="What is your name:">
+							</p>
+							<p class="measurement__block">
+								<label class="measurement__label" for="measurement__phone">Phone</label>
+								<input class="measurement__input" id="measurement__phone" name="phone" type="tel"
+									placeholder="Your phone number:">
+							</p>
+							<p class="measurement__block">
+								<label class="measurement__label" for="measurement__email">Phone</label>
+								<input class="measurement__input" id="measurement__email" name="phone" type="tel"
+									placeholder="Your phone number:">
+							</p>
+							<p class="measurement__checkbox">
+								<input type="checkbox" name="measurement-form" id="measurement-form" checked>
+								<label for="measurement-form">I agree to the processing of personal data</label>
+							</p>
+							<button class="measurement__button" type="button">Call the measurer</button>
+						</form>
+						<p class="measurement__text">
+							Help save 10 - 20% of the
+							<br>
+							cost of materials
+						</p>
+					</div>
+				</div>
+			</section>
+
 		</main>
 
 	</div>
