feat: add section 'collection'

--- a/index.html
+++ b/index.html
@@ -317,6 +317,80 @@
 				</div>
 			</section>
 
+			<section class="collection">
+				<div class="container">
+					<div class="collection__wrapper-header">
+						<h2 class="collection__header">
+							We realize your
+							<br>
+							wildest fantasies
+						</h2>
+						<ul class="collection__list">
+							<li class="collection__item">
+								<a href="#" class="collection__link collection__link_is-active">American classik</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Empire</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Classical</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Loft</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Minimalism</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Provence</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Romanticism</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Scandinavian style</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Mediterranean style</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">High tech</a>
+							</li>
+							<li class="collection__item">
+								<a href="#" class="collection__link">Eclecticism</a>
+							</li>
+						</ul>
+					</div>
+					<div class="collection__wrapper-gallery">
+						<ul class="collection__first-list">
+							<li class="collection__first-list__item">
+								<img src="./assets/images/collection-list-image-1.jpg" alt="photo interior's">
+							</li>
+							<li class="collection__first-list__item">
+								<img src="./assets/images/collection-list-image-2.jpg" alt="photo interior's">
+							</li>
+							<li class="collection__first-list__item current-slider">
+								<picture>
+									<source srcset="./assets/images/collection-current-slider-mobile.jpg" media="(max-width: 375px)">
+										<source srcset="./assets/images/collection-current-slider.jpg" alt="photo interior's">
+										<img src="./assets/images/collection-current-slider.jpg" alt="photo interior's">
+								</picture>
+							</li>
+						</ul>
+						<ul class="collection__second-list">
+							<li class="collection__second-list__item">
+								<img src="./assets/images/collection-list-image-3.jpg" alt="photo interior's">
+							</li>
+							<li class="collection__second-list__item">
+								<img src="./assets/images/collection-list-image-4.jpg" alt="photo interior's">
+							</li>
+						</ul>
+						<button class="collection__button-left"></button>
+						<button class="collection__button-right"></button>
+					</div>
+				</div>
+			</section>
+
 		</main>
 
 	</div>
