feat: add section design(header and list)

--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
 							<li class="collection__first-list__item current-slider">
 								<picture>
 									<source srcset="./assets/images/collection-current-slider-mobile.jpg" media="(max-width: 375px)">
-										<source srcset="./assets/images/collection-current-slider.jpg" alt="photo interior's">
-										<img src="./assets/images/collection-current-slider.jpg" alt="photo interior's">
+									<source srcset="./assets/images/collection-current-slider.jpg" alt="photo interior's">
+									<img src="./assets/images/collection-current-slider.jpg" alt="photo interior's">
 								</picture>
 							</li>
 						</ul>
@@ -390,6 +390,95 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="design">
+				<div class="container">
+					<h2 class="header-section">
+						design project
+					</h2>
+					<div class="header-icon">
+						<span class="header__lines">
+							<img src="./assets/images/design-icon.svg" width="28" height="28" alt="icon-hummer">
+						</span>
+					</div>
+					<p class="design__text">
+						Design project not only helps to make the repair of your apartment more modern,
+						but also significantly reduces the cost of materials and reduces the time of repair work.
+					</p>
+					<ul class="design__list">
+						<li class="design__item">
+							<picture>
+								<source srcset="./assets/images/design-foto1-mobile.jpg" media="(max-width: 375px)">
+								<source srcset="./assets/images/design-foto1-desktop.jpg">
+								<img src="./assets/images/design-foto1-desktop.jpg" alt="Foto design's project">
+							</picture>
+							<div class="design__list-wrapper">
+								<h3 class="design__list-header">
+									Mini
+								</h3>
+								<ul class="design__sublist">
+									<li>Measurement drawing</li>
+									<li>Redevelopment</li>
+									<li>Layout of furniture</li>
+									<li>Plan of ceilings</li>
+								</ul>
+							</div>
+							<button class="design__button" type="button">150 rub / m2</button>
+						</li>
+						<li class="design__item">
+							<picture>
+								<source srcset="./assets/images/design-foto2-mobile.jpg" media="(max-width: 375px)">
+								<source srcset="./assets/images/design-foto2-desktop.jpg">
+								<img src="./assets/images/design-foto2-desktop.jpg" alt="Foto design's project">
+							</picture>
+							<div class="design__list-wrapper">
+								<h3 class="design__list-header">
+									Standart
+								</h3>
+								<ul class="design__sublist">
+									<li>Measurement drawing</li>
+									<li>Redevelopment</li>
+									<li>Layout of furniture</li>
+									<li>Plan of ceilings</li>
+									<li>Floor Plan</li>
+									<li>Electrician plan</li>
+									<li>Lighting plan</li>
+								</ul>
+							</div>
+							<button class="design__button" type="button">400 rub / m2</button>
+						</li>
+						<li class="design__item">
+							<picture>
+								<source srcset="./assets/images/design-foto3-mobile.jpg" media="(max-width: 375px)">
+								<source srcset="./assets/images/design-foto3-desktop.jpg">
+								<img src="./assets/images/design-foto3-desktop.jpg" alt="Foto design's project">
+							</picture>
+							<div class="design__list-wrapper">
+								<h3 class="design__list-header">
+									Full
+								</h3>
+								<ul class="design__sublist">
+									<li>Measurement drawing</li>
+									<li>Redevelopment</li>
+									<li>Layout of furniture</li>
+									<li>Plan of ceilings</li>
+									<li>Floor Plan</li>
+									<li>Electrician plan</li>
+									<li>Lighting plan</li>
+									<li>Wall reamers</li>
+									<li>3D visualization</li>
+									<li>Bill of materials</li>
+									<li>Departure for a selection of materials</li>
+									<li>Furniture selection</li>
+								</ul>
+							</div>
+							<button class="design__button" type="button">900 rub / m2</button>
+						</li>
+					</ul>
+				</div>
+			</section>
+
+
 
 		</main>
 
