feat: add section design, responseve

--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
 									<li>Layout of furniture</li>
 									<li>Plan of ceilings</li>
 								</ul>
+								<button class="design__button" type="button">150 rub / m2</button>
 							</div>
-							<button class="design__button" type="button">150 rub / m2</button>
 						</li>
 						<li class="design__item">
 							<picture>
@@ -444,8 +444,8 @@
 									<li>Electrician plan</li>
 									<li>Lighting plan</li>
 								</ul>
+								<button class="design__button" type="button">400 rub / m2</button>
 							</div>
-							<button class="design__button" type="button">400 rub / m2</button>
 						</li>
 						<li class="design__item">
 							<picture>
@@ -465,14 +465,14 @@
 									<li>Floor Plan</li>
 									<li>Electrician plan</li>
 									<li>Lighting plan</li>
-									<li>Wall reamers</li>
-									<li>3D visualization</li>
-									<li>Bill of materials</li>
-									<li>Departure for a selection of materials</li>
-									<li>Furniture selection</li>
+									<li class="mobile-hidden">Wall reamers</li>
+									<li class="mobile-hidden">3D visualization</li>
+									<li class="mobile-hidden">Bill of materials</li>
+									<li class="mobile-hidden">Departure for a selection of materials</li>
+									<li class="mobile-hidden">Furniture selection</li>
 								</ul>
+								<button class="design__button" type="button">900 rub / m2</button>
 							</div>
-							<button class="design__button" type="button">900 rub / m2</button>
 						</li>
 					</ul>
 				</div>
