feat: add part section 'steps'

--- a/index.html
+++ b/index.html
@@ -478,7 +478,85 @@
 				</div>
 			</section>
 
-
+			<section class="steps">
+				<div class="container">
+					<section class="steps__wrapper">
+						<p class="steps__slogan">
+							How we are working
+						</p>
+						<h2 class="steps__header">
+							6 steps to
+							<br>
+							the goal
+						</h2>
+						<section class="steps__description">
+							<p class="steps__number">
+								1/6
+							</p>
+							<h3 class="steps__subheader">
+								Departure for
+								<br>
+								measurements premises
+							</h3>
+							<p class="steps__text">
+								After your call, we go to you to consult and measure the premises of your apartment. During our meeting,
+								you can ask absolutely any number of questions. An appraiser-appraiser leaves to measure the room.
+								He will advise you on the issues of repair technology, apartment design, terms of repair of the
+								apartment as a whole and its individual stages.
+							</p>
+						</section>
+					</section>
+					<section class="steps__slider">
+						<ul class="steps__list">
+							<li class="steps__item">
+								<a href="#" class="steps__link steps__link_active">
+									<p class="steps__position">01</p>
+									<p class="steps__name">Departure to
+										room measurements</p>
+								</a>
+							</li>
+							<li class="steps__item">
+								<a href="#" class="steps__link">
+									<p class="steps__position">02</p>
+									<p class="steps__name">Compilation
+										estimates</p>
+								</a>
+							</li>
+							<li class="steps__item">
+								<a href="#" class="steps__link">
+									<p class="steps__position">03</p>
+									<p class="steps__name">Development
+										project design</p>
+								</a>
+							</li>
+							<li class="steps__item">
+								<a href="#" class="steps__link">
+									<p class="steps__position">04</p>
+									<p class="steps__name">Purchasing Supplies</p>
+								</a>
+							</li>
+							<li class="steps__item">
+								<a href="#" class="steps__link">
+									<p class="steps__position">05</p>
+									<p class="steps__name">Repair finishing work</p>
+								</a>
+							</li>
+							<li class="steps__item">
+								<a href="#" class="steps__link">
+									<p class="steps__position">06</p>
+									<p class="steps__name">Приемка-сдача работ</p>
+								</a>
+							</li>
+						</ul>
+						<ul class="steps__slider-fotos">
+							<li class="steps__slider-item">
+								<img src="./assets/images/steps-slider-foto.jpg" width="765" height="378"
+									alt="Departure to room measurement">
+							</li>
+						</ul>
+					</section>
+				</div>
+			</section>
 
 		</main>
 
