feat: add section 'team'

--- a/index.html
+++ b/index.html
@@ -554,7 +554,113 @@
 									alt="Departure to room measurement">
 							</li>
 						</ul>
+						<nav class="steps__nav">
+							<ul class="steps__nav-list">
+								<li class="steps__nav-item">
+									<button class="steps__nav-button steps__nav-button_current"></button>
+								</li>
+								<li class="steps__nav-item">
+									<button class="steps__nav-button"></button>
+								</li>
+								<li class="steps__nav-item">
+									<button class="steps__nav-button"></button>
+								</li>
+								<li class="steps__nav-item">
+									<button class="steps__nav-button"></button>
+								</li>
+								<li class="steps__nav-item">
+									<button class="steps__nav-button"></button>
+								</li>
+								<li class="steps__nav-item">
+									<button class="steps__nav-button"></button>
+								</li>
+							</ul>
+						</nav>
 					</section>
+				</div>
+			</section>
+
+			<section class="team">
+				<div class="container">
+						<h2 class="header-section">
+							our team
+						</h2>
+						<div class="header-icon">
+							<span class="header__lines">
+								<img src="./assets/images/team-icon.svg" width="28" height="28" alt="icon-hummer">
+							</span>
+						</div>
+						<div class="team__slogan">
+							Our team has helped to become happier for more than
+							500 families and we are not going to stop
+						</div>
+						<ul class="team__list">
+							<li class="team__item">
+								<picture>
+									<picture>
+										<source srcset="./assets/images/team-foto1-mobile.jpg" media="(max-width: 375px)">
+										<source srcset="./assets/images/team-foto1-desktop.jpg">
+										<img src="./assets/images/team-foto1-desktop.jpg" width="272" height="357" alt="An employee photo">
+									</picture>
+								</picture>
+								<div class="team__wrapper">
+									<p class="team__name">
+										Dmitry tulyakov
+									</p>
+									<p class="team__position">
+										Project manager
+									</p>
+									<p class="team__experience">
+										Work experience 8 years
+									</p>
+								</div>
+							</li>
+							<li class="team__item">
+								<picture>
+									<picture>
+										<source srcset="./assets/images/team-foto2-mobile.jpg" media="(max-width: 375px)">
+										<source srcset="./assets/images/team-foto2-desktop.jpg">
+										<img src="./assets/images/team-foto2-desktop.jpg" width="272" height="357" alt="An employee photo">
+									</picture>
+								</picture>
+								<div class="team__wrapper">
+									<p class="team__name">
+										Larisa Kotlyarova
+									</p>
+									<p class="team__position">
+										Designer
+									</p>
+									<p class="team__experience">
+										Work experience 6 years
+									</p>
+								</div>
+							</li>
+							<li class="team__item">
+								<picture>
+									<picture>
+										<source srcset="./assets/images/team-foto3-mobile.jpg" media="(max-width: 375px)">
+										<source srcset="./assets/images/team-foto3-desktop.jpg">
+										<img src="./assets/images/team-foto3-desktop.jpg" width="272" height="357" alt="An employee photo">
+									</picture>
+								</picture>
+								<div class="team__wrapper">
+									<p class="team__name">
+										Alexey Efimov
+									</p>
+									<p class="team__position">
+										Foreman
+									</p>
+									<p class="team__experience">
+										Work experience 12 years
+									</p>
+								</div>
+							</li>
+						</ul>
+						<p class="team__text">
+							Each employee of our company is a qualified full-time specialist
+							with work experience of 6 years.
+							We do not have laborers and guest workers, each employee carries out work corresponding to his specialty.
+						</p>
 				</div>
 			</section>
 
