feat: add section 'clients' and to edit file README.md

--- a/index.html
+++ b/index.html
@@ -582,85 +582,153 @@
 
 			<section class="team">
 				<div class="container">
-						<h2 class="header-section">
-							our team
-						</h2>
-						<div class="header-icon">
-							<span class="header__lines">
-								<img src="./assets/images/team-icon.svg" width="28" height="28" alt="icon-hummer">
-							</span>
-						</div>
-						<div class="team__slogan">
-							Our team has helped to become happier for more than
-							500 families and we are not going to stop
-						</div>
-						<ul class="team__list">
-							<li class="team__item">
+					<h2 class="header-section">
+						our team
+					</h2>
+					<div class="header-icon">
+						<span class="header__lines">
+							<img src="./assets/images/team-icon.svg" width="28" height="28" alt="icon-hummer">
+						</span>
+					</div>
+					<div class="team__slogan">
+						Our team has helped to become happier for more than
+						500 families and we are not going to stop
+					</div>
+					<ul class="team__list">
+						<li class="team__item">
+							<picture>
 								<picture>
-									<picture>
-										<source srcset="./assets/images/team-foto1-mobile.jpg" media="(max-width: 375px)">
-										<source srcset="./assets/images/team-foto1-desktop.jpg">
-										<img src="./assets/images/team-foto1-desktop.jpg" width="272" height="357" alt="An employee photo">
-									</picture>
+									<source srcset="./assets/images/team-foto1-mobile.jpg" media="(max-width: 375px)">
+									<source srcset="./assets/images/team-foto1-desktop.jpg">
+									<img src="./assets/images/team-foto1-desktop.jpg" width="272" height="357" alt="An employee photo">
 								</picture>
-								<div class="team__wrapper">
-									<p class="team__name">
-										Dmitry tulyakov
-									</p>
-									<p class="team__position">
-										Project manager
-									</p>
-									<p class="team__experience">
-										Work experience 8 years
-									</p>
-								</div>
-							</li>
-							<li class="team__item">
+							</picture>
+							<div class="team__wrapper">
+								<p class="team__name">
+									Dmitry tulyakov
+								</p>
+								<p class="team__position">
+									Project manager
+								</p>
+								<p class="team__experience">
+									Work experience 8 years
+								</p>
+							</div>
+						</li>
+						<li class="team__item">
+							<picture>
 								<picture>
-									<picture>
-										<source srcset="./assets/images/team-foto2-mobile.jpg" media="(max-width: 375px)">
-										<source srcset="./assets/images/team-foto2-desktop.jpg">
-										<img src="./assets/images/team-foto2-desktop.jpg" width="272" height="357" alt="An employee photo">
-									</picture>
+									<source srcset="./assets/images/team-foto2-mobile.jpg" media="(max-width: 375px)">
+									<source srcset="./assets/images/team-foto2-desktop.jpg">
+									<img src="./assets/images/team-foto2-desktop.jpg" width="272" height="357" alt="An employee photo">
 								</picture>
-								<div class="team__wrapper">
-									<p class="team__name">
-										Larisa Kotlyarova
-									</p>
-									<p class="team__position">
-										Designer
-									</p>
-									<p class="team__experience">
-										Work experience 6 years
-									</p>
-								</div>
-							</li>
-							<li class="team__item">
+							</picture>
+							<div class="team__wrapper">
+								<p class="team__name">
+									Larisa Kotlyarova
+								</p>
+								<p class="team__position">
+									Designer
+								</p>
+								<p class="team__experience">
+									Work experience 6 years
+								</p>
+							</div>
+						</li>
+						<li class="team__item">
+							<picture>
 								<picture>
-									<picture>
-										<source srcset="./assets/images/team-foto3-mobile.jpg" media="(max-width: 375px)">
-										<source srcset="./assets/images/team-foto3-desktop.jpg">
-										<img src="./assets/images/team-foto3-desktop.jpg" width="272" height="357" alt="An employee photo">
-									</picture>
+									<source srcset="./assets/images/team-foto3-mobile.jpg" media="(max-width: 375px)">
+									<source srcset="./assets/images/team-foto3-desktop.jpg">
+									<img src="./assets/images/team-foto3-desktop.jpg" width="272" height="357" alt="An employee photo">
 								</picture>
-								<div class="team__wrapper">
-									<p class="team__name">
-										Alexey Efimov
-									</p>
-									<p class="team__position">
-										Foreman
-									</p>
-									<p class="team__experience">
-										Work experience 12 years
-									</p>
-								</div>
-							</li>
-						</ul>
-						<p class="team__text">
-							Each employee of our company is a qualified full-time specialist
-							with work experience of 6 years.
-							We do not have laborers and guest workers, each employee carries out work corresponding to his specialty.
-						</p>
+							</picture>
+							<div class="team__wrapper">
+								<p class="team__name">
+									Alexey Efimov
+								</p>
+								<p class="team__position">
+									Foreman
+								</p>
+								<p class="team__experience">
+									Work experience 12 years
+								</p>
+							</div>
+						</li>
+					</ul>
+					<p class="team__text">
+						Each employee of our company is a qualified full-time specialist
+						with work experience of 6 years.
+						We do not have laborers and guest workers, each employee carries out work corresponding to his specialty.
+					</p>
+				</div>
+			</section>
+
+			<section class="clients">
+				<div class="container">
+					<h2 class="header-section">
+						our clients
+					</h2>
+					<div class="header-icon">
+						<span class="header__lines">
+							<img src="./assets/images/clients-icon.svg" width="34" height="28" alt="icon-hummer">
+						</span>
+					</div>
+					<p class="clients__description">
+						80% of our customers recommend us to their
+						friends and family.
+					</p>
+					<ul class="clients__list">
+						<li class="clients__item">
+							<div class="clients__wrapper">
+								<img src="./assets/images/clients-foto1.png" alt="Foto client's" class="clients__image">
+								<p class="clients__name">Fedosova Maria
+									Konstantinovna</p>
+							</div>
+							<p class="clients__comment">I want to thank the guys for their work. We put your shower part in repair. I
+								am very grateful that I referred to the repair as to my own. Great thanks I express the project to
+								georgia for its professionalism and approach. The repair process was turned out in terms, faster than
+								anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality
+								satisfied. prices democratic. I recommend these masters.
+							</p>
+							<section class="clients__thing">
+								<span class="clients__metres">40 m2</span>
+								<span class="clients__days">48 days</span>
+							</section>
+						</li>
+						<li class="clients__item">
+							<div class="clients__wrapper">
+								<img src="./assets/images/clients-foto2.png" alt="Foto client's" class="clients__image">
+								<p class="clients__name">Afanasyev Sergey Alexandrovich</p>
+							</div>
+							<p class="clients__comment">I want to thank the guys for their work. We put your shower part in repair. I
+								am very grateful that I referred to the repair as to my own. Great thanks I express the project to
+								georgia for its professionalism and approach. The repair process was turned out in terms, faster than
+								anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality
+								satisfied. prices democratic. I recommend these masters.
+							</p>
+							<section class="clients__thing">
+								<span class="clients__metres">90 m2</span>
+								<span class="clients__days">128 days</span>
+							</section>
+						</li>
+						<li class="clients__item">
+							<div class="clients__wrapper">
+								<img src="./assets/images/clients-foto3.png" alt="Foto client's" class="clients__image">
+								<p class="clients__name">Kiriev Egor Leonidovich</p>
+							</div>
+							<p class="clients__comment">I want to thank the guys for their work. We put your shower part in repair. I
+								am very grateful that I referred to the repair as to my own. Great thanks I express the project to
+								georgia for its professionalism and approach. The repair process was turned out in terms, faster than
+								anticipated. Team mobile and professional. Works performed qualitatively without comments. Quality
+								satisfied. prices democratic. I recommend these masters.
+							</p>
+							<section class="clients__thing">
+								<span class="clients__metres">56 m2</span>
+								<span class="clients__days">86 days</span>
+							</section>
+						</li>
+					</ul>
 				</div>
 			</section>
 
